# C-

./: LICENSE
Learn/: main.cpp  main.ilk
Learn2/: CMakeLists.txt  main.cpp  main.h
Learn2/event/: GlobalEvent.cpp  GlobalEvent.h
Learn2/utils/: TextBuilder.cpp  TextBuilder.h
Learn2/world/: Asteroid.cpp  Missile.cpp  Ship.cpp  map.cpp
Learn2/world/header/: Asteroid.h  Missile.h  Ship.h  map.h
QT - APP/Test/Test/: CMakeLists.txt  Test.qmlproject  Test.qmlproject.qtds
QT - APP/Test/Test/content/: Screen01.ui.qml
QT - APP/Test/Test/imports/Test/: CMakeLists.txt  qmldir
QT - APP/Test2/build-sans_titre-Desktop_Qt_6_5_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
QT - APP/Test2/build-sans_titre-Desktop_Qt_6_5_3_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-ebd7e5d0210e798a42ce.json  cmakeFiles-v1-1cb5a292e1f005ba2b9e.json  codemodel-v2-e6ecb56281f488bd874d.json  index-2023-10-06T05-43-23-0421.json  target-sans_titre-Debug-7cf835c4a2b1ea15b813.json  target-sans_titre_autogen-Debug-4acc9232f737b0c8bae8.json  (+1 more)
QT - APP/Test2/build-sans_titre-Desktop_Qt_6_5_3_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
QT - APP/Test2/build-sans_titre-Desktop_Qt_6_5_3_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
QT - APP/Test2/build-sans_titre-Desktop_Qt_6_5_3_MinGW_64_bit-Debug/sans_titre_autogen/: deps
QT - APP/Test2/sans_titre/: CMakeLists.txt  GIInterface  GIMain  GISource  main.cpp
TEEEEEST/: CMakeLists.txt  main.cpp
untitled/: CMakeLists.txt
(+5 files in other folders)
